# MCasrTest

./: .gitignore  CMakeLists.txt  README.md  build  callgrind.out.696412  dox_build  main  makeit
capture/: dump1000.pcapng  dump1200.pcapng  dump1350.pcapng  dump300.pcapng
etc/json/: mcast_conf.json
etc/json/dissemination/: prod.conf.json  prod_addr.json
include/stg/ai/: ai.hpp  common.hpp  filesystem.hpp  lock.hpp  log.hpp  manage.hpp  mock.hpp  perfwatch.hpp  semaphore.hpp  types.hpp
include/stg/ai/chrono/: date.hpp  time.hpp  time_barrier.hpp  tm_cast.hpp  tm_types.hpp
include/stg/ai/types/: range.hpp  significand.hpp
include/stg/ai/xipc_mq/: conf.hpp  fetch.hpp  mman.hpp  slot.hpp  types.hpp  xipc.hpp  xipc_api.hpp
include/stg/ai/xring/: conf.hpp  fetch.hpp  mman.hpp  slot.hpp  types.hpp  xring.hpp  xring_api.hpp
include/stg/mdp/mdd/auth/: auth.hpp  auth_multicast.hpp
include/stg/mdp/mdd/common/json_gnr/: converter.hpp
include/stg/mdp/mdd/common/reader/: interface.hpp  reader.hpp
include/stg/mdp/mdd/conf/auth_conf/: auth_conf.hpp  types.hpp
include/stg/mdp/mdd/conf/crypto_conf/: crypto_conf.hpp  types.hpp
include/stg/mdp/mdd/conf/db_conf/: db_conf.hpp  types.hpp
include/stg/mdp/mdd/conf/dissemination/: production.hpp
include/stg/mdp/mdd/conf/mcast/: mcast_conf.hpp  types.hpp
include/stg/mdp/mdd/db/: db_driver.hpp
include/stg/mdp/mdd/net/: socket.hpp
include/stg/mdp/mdd/serialize/: record.hpp  serializer.hpp
log/: stg.ai.perf.xring.20200917T153713Z.audit  stg.ai.perf.xring.20200917T153713Z.syslog
src/: main.cpp
(+34 files in other folders)
